page alignment corrected update

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ h1{
 }
 
 .mid-content-div p{
-    margin-bottom: 20%;
+    margin-bottom: 10%;
     padding-right: 25%;
 }
 
